crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/unmatched_open_brace.stderr
error: Unmatched '{' at position 7
       All parameter markers must be properly closed with '}'
 --> tests/ui/fail/unmatched_open_brace.rs:4:19
  |
4 |     let _ = path!("/users/{id/");
  |                   ^^^^^^^^^^^^^
